# troublerouting-agent

./: .clinerules  .env.example  .gitignore  BOARD.md  Dockerfile  README.md  devices.yml  docker-compose.yml  main.py  pyproject.toml  test_hcl_ssh.py  test_ospf.py  整体项目目标-待改进.md
agent/: agents.py  case_library.py  cmdb.py  device_adapter.py  device_loader.py  device_pool.py  diagnostician.py  dispatcher.py  fallback.py  investigator.py  llm_client.py  pipeline.py  reporter.py  safety_officer.py  scenario_registry.py  solution_engineer.py  state_store.py  tacacs_guard.py  webhook.py
docs/: ADR.md  ARCHITECTURE.md  DEVELOPMENT.md  OPS.md  PRD.md  PROJECT.md  README.md  SETUP.md  TROUBLESHOOTING.md  deep_agents_poc.md
mcp/: __init__.py  audit_log.py  command_whitelist.py
scripts/: disable_hyperv.ps1  enable_hyperv.ps1
tests/: test_agents.py  test_case_library.py  test_diagnostician.py  test_dispatcher.py  test_docker.py  test_e2e.py  test_fallback.py  test_investigator.py  test_mcp.py  test_mysql_store.py  test_netmiko.py  test_rag.py  test_reporter.py  test_scaffold.py  test_scenarios.py  test_solution_safety.py  test_state_store.py  test_tacacs.py  test_webhook.py
tests/scenarios/: 01_interface_down.yml  02_ospf_down.yml  03_bgp_down.yml  04_dhcp_failure.yml  05_stp_change.yml
