[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "troublerouting-agent"
version = "0.1.0"
description = "AI-Powered Network Troubleshooting Multi-Agent System"
readme = "docs/PRD.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pyautogen>=0.4.0",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
    "netmiko>=4.3.0",
    "ntc-templates>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]